[package]
name = "dataplatform-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
maplit = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
oauth2 = { version = "5.0.0-rc.1", features = ["reqwest-blocking"] }
reqwest = {  version = "0.12", features = ["blocking"] }

[lib]
proc-macro = true