[package]
name = "dataplatform-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
maplit = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
reqwest = {  version = "0.12", features = ["blocking", "json"] }
chrono = { version ="0.4", features = ["serde"] }
rand = "0.9"
futures = "0.3"

[lib]
proc-macro = true